--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,14 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Oregano&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Oregano&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
 @import "~normalize.css";
 @import "_variables";
+@import "modules/navigation.scss";
 
 
 body {
-  background: $wtf;
   color: #fff;
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 100vh;
+  width: 100%;
 }
