--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,12 +4,28 @@
 @import "~normalize.css";
 @import "_variables";
 @import "modules/navigation.scss";
+@import "modules/hero.scss";
 
 
-body {
-  color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
+// body {
+//   color: #fff;
+//   display: flex;
+//   align-items: center;
+//   justify-content: center;
+// }
+
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
