--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -1,25 +1,31 @@
 .navigation {
-    position: fixed;
+    position: absolute;
     top: 100px;
-    left: 0;
+    width: 100%;
+    display: flex;
     height: 50px;
-    width: 100vw;
     font-size: 18px;
     font-family: 'Montserrat', sans-serif;
 
     &__container {
-        max-width: 1440px;
+        max-width: 1400px;
         margin: 0 auto;
     }
 
     &__list {
         display: flex;
-        justify-content: space-between;
         align-items: center;
-        padding: 0;
 
         &--item {
             // margin: 16px 64px;
+            list-style: none;
+            background-color: $grey-dark;
+            padding: 16px 64px;
+        }
+
+        &--main {
+            background-color: $yellow;
+            padding: 16px 64px;
         }
     }
 }
@@ -28,12 +34,11 @@
 .link {
     text-decoration: none;
     color: #fff;
-    background-color: $grey-dark;
-    padding: 16px 64px;
+    // background-color: $grey-dark;
+    // padding: 16px 64px;
 }
 
 .link__main {
     color: black;
-    background-color: $yellow;
-    padding: 16px 64px;
 }
+
