--- a/src/scss/modules/hero.scss
+++ b/src/scss/modules/hero.scss
@@ -1,4 +1,16 @@
 .hero {
+    position: relative;
+
+
+    &__header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 1400px;
+        margin: 0 auto;
+    }
+
 
     &-img {
         width: 100%;
@@ -8,6 +20,29 @@
             margin: 0 auto;
         }
     }
+
+    &__information {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        text-align: center;
+
+        &--icon {
+            width: 50px;
+            height: 50px;
+        }
+
+        &--items {
+            display: flex;
+        }
+
+        &--item {
+            padding-right: 85px;
+
+            &-heading {
+                font-size: 24px;
+                font-weight: bold;
+            }
+        }
+    }
 }
-
-
