--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -1,6 +1,6 @@
 .navigation {
-    position: absolute;
-    top: 100px;
+    position: fixed;
+    top: 80px;
     width: 100%;
     display: flex;
     height: 50px;
