--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Oregano&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700&family=Oregano&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
 @import "~normalize.css";
 @import "_variables";
 @import "modules/navigation.scss";
 @import "modules/hero.scss";
-
+@import "modules/information.scss";
 
 // body {
 //   color: #fff;
