--- a/src/scss/modules/hero.scss
+++ b/src/scss/modules/hero.scss
@@ -14,6 +14,7 @@
 
     &-img {
         width: 100%;
+        margin-top: 25px;
 
         &__container {
             max-width: 1400px;
@@ -30,6 +31,7 @@
         &--icon {
             width: 50px;
             height: 50px;
+            margin-right: 16px;
         }
 
         &--items {
@@ -41,7 +43,7 @@
 
             &-heading {
                 font-size: 24px;
-                font-weight: bold;
+                font-weight: 500;
             }
         }
     }
