--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import "modules/navigation.scss";
 @import "modules/hero.scss";
 @import "modules/information.scss";
+@import "modules/check-section.scss";
 
 // body {
 //   color: #fff;
