feat: photos-section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -7,6 +7,7 @@
 @import "modules/hero.scss";
 @import "modules/information.scss";
 @import "modules/check-section.scss";
+@import "modules/gallery.scss";
 
 // body {
 //   color: #fff;
