feat: localization section :)

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,6 +8,8 @@
 @import "modules/information.scss";
 @import "modules/check-section.scss";
 @import "modules/gallery.scss";
+@import "modules/localization.scss";
+@import "modules/opinions.scss";
 
 // body {
 //   color: #fff;
