--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,6 +10,7 @@
 @import "modules/gallery.scss";
 @import "modules/localization.scss";
 @import "modules/opinions.scss";
+@import "modules/contact.scss";
 
 // body {
 //   color: #fff;
