--- a/src/scss/modules/check-section.scss
+++ b/src/scss/modules/check-section.scss
@@ -52,7 +52,7 @@
 
     &__head {
         font-size: 36px;
-        font-weight: bold;
+        font-weight: 500;
         color: $grey-light;
     }
 }
