feat: opinion-section

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,6 +11,7 @@
 @import "modules/localization.scss";
 @import "modules/opinions.scss";
 @import "modules/contact.scss";
+@import "modules/footer.scss";
 
 // body {
 //   color: #fff;
