feat: simple hamburger menu

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,7 @@
 @import "modules/opinions.scss";
 @import "modules/contact.scss";
 @import "modules/footer.scss";
+@import "modules/hamburger.scss";
 
 // body {
 //   color: #fff;
