--- a/src/scss/modules/gallery.scss
+++ b/src/scss/modules/gallery.scss
@@ -4,12 +4,18 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 32px;
+    justify-items: center;
+
+    @media (max-width: 1350px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
 
 
     &__item {
         margin-bottom: 50px;
         display: flex;
         flex-direction: column;
+        max-width: 384px;
     }
 
     &__description {
