--- a/src/scss/modules/information.scss
+++ b/src/scss/modules/information.scss
@@ -3,11 +3,17 @@
     justify-content: space-between;
     max-width: 1350px;
     margin: 0 auto;
+
+    @media (max-width: 1350px) {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .article-head {
     font-size: 48px;
-    margin: 35px 0 20px 0;
+    margin: 60px 0 20px 0;
     color: $grey-dark;
 }
 
