--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -1,51 +1,73 @@
 .navigation {
-    position: fixed;
-    top: 100px;
-    width: 100%;
+  position: fixed;
+  top: 100px;
+  width: 100%;
+  display: flex;
+  height: 50px;
+  font-size: 18px;
+  font-weight: 500;
+  transition: transform 0.3s ease-in-out 0.1s;
+
+  @media (max-width: 1350px) {
+    // visibility: hidden;
+    // display: none;
+    position: absolute;
+    left: -300px;
+    top: 0;
+    height: 100vh;
+    width: 300px;
+
+    &__active {
+      visibility: visible;
+      display: block;
+
+      transform: translateX(300px);
+    }
+  }
+
+  &__scroll {
+    transform: translateY(-100px);
+  }
+
+  &__container {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+
+  &__list {
     display: flex;
-    height: 50px;
-    font-size: 18px;
-    font-weight: 500;
-    transition: 0.3s ease-in-out ;
+    align-items: center;
 
-    &__scroll {
-        top: 0px;
-        transition: 0.3s ease-in-out ;
+    @media (max-width: 1350px) {
+      display: flex;
+      flex-direction: column;
     }
 
-    &__container {
-        max-width: 1400px;
-        margin: 0 auto;
+    &--item {
+      // margin: 16px 64px;
+      list-style: none;
+      background-color: $grey-dark;
+      padding: 16px 64px;
+      width: 300px;
+      display: flex;
+      justify-content: center;
     }
 
-    &__list {
-        display: flex;
-        align-items: center;
-
-        &--item {
-            // margin: 16px 64px;
-            list-style: none;
-            background-color: $grey-dark;
-            padding: 16px 64px;
-        }
-
-        &--main {
-            background-color: $yellow;
-            padding: 16px 64px;
-        }
+    &--main {
+      background-color: $yellow;
+      padding: 16px 64px;
     }
+  }
 }
 
-
 .link {
-    text-decoration: none;
-    color: #fff;
+  text-decoration: none;
+  color: #fff;
 
-    //nie robia sie odstepy "entery"
-    white-space: nowrap;
+  //nie robia sie odstepy "entery"
+  white-space: nowrap;
 }
 
 .link__main {
-    color: black;
+  color: black;
 }
-
