--- a/src/scss/modules/contact.scss
+++ b/src/scss/modules/contact.scss
@@ -1,10 +1,17 @@
 .contact {
     margin-top: 70px;
     width: 100%;
-    height: 120px;
+    padding: 64px;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background-color: $yellow;
+
+    @media (max-width: 850px) {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 }
