--- a/src/scss/modules/gallery.scss
+++ b/src/scss/modules/gallery.scss
@@ -3,11 +3,15 @@
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 32px;
+    grid-gap: 8px;
     justify-items: center;
 
     @media (max-width: 1350px) {
         grid-template-columns: repeat(2, 1fr);
+    }
+    
+    @media (max-width: 900px) {
+        grid-template-columns: 1fr;
     }
 
 
