--- a/src/scss/modules/hero.scss
+++ b/src/scss/modules/hero.scss
@@ -36,14 +36,28 @@
             width: 50px;
             height: 50px;
             margin-right: 16px;
+
+            @media (max-width: 850px) {
+                width: 60px;
+                height: 60px;
+            }
         }
 
         &--items {
             display: flex;
+
+            @media (max-width: 850px) {
+                padding: 32px 0;
+                width: 200px;
+            }
         }
 
         &--item {
             padding-right: 85px;
+
+            @media (max-width: 850px) {
+                padding-right: 0;
+            }
 
             &-heading {
                 font-size: 24px;
