--- a/src/scss/modules/information.scss
+++ b/src/scss/modules/information.scss
@@ -11,16 +11,6 @@
     }
 }
 
-.article-head {
-    font-size: 48px;
-    margin: 60px 0 20px 0;
-    color: $grey-dark;
-}
-
-.article-container {
-    width: 600px;
-    margin-top: 50px;
-}
 
 .about {
 
@@ -48,5 +38,22 @@
         font-size: 18px;
         font-weight: 500;
         color: $grey-dark;
+    }
+
+    &-head {
+        font-size: 48px;
+        margin: 60px 0 20px 0;
+        color: $grey-dark;
+    }
+
+    &-container {
+        max-width: 600px;
+        margin: 50px 16px 0;
+    }
+}
+
+.line {
+    @media (max-width: 900px) {
+        display: none;
     }
 }
