--- a/src/scss/modules/check-section.scss
+++ b/src/scss/modules/check-section.scss
@@ -67,5 +67,9 @@
             margin: 0 auto;
         }
 
+        @media (max-width: 500px) {
+            font-size: 24px;
+        }
+
     }
 }
