--- a/src/scss/modules/footer.scss
+++ b/src/scss/modules/footer.scss
@@ -11,5 +11,14 @@
         align-items: center;
         font-size: 16px;
         color: #fff;
+        padding: 8px;
+
+        @media (max-width: 500px) {
+            font-size: 12px;
+        }
     }
+}
+
+.footer p {
+    padding-top: 16px;
 }
