--- a/src/scss/modules/hamburger.scss
+++ b/src/scss/modules/hamburger.scss
@@ -1,4 +1,6 @@
 .hamburger {
+    position: fixed;
+    right: 16px;
     background-color: transparent;
     padding: 10px;
     display: inline-block;
@@ -60,8 +62,4 @@
 
 .hamburger__active .hamburger__inner::after {
     transform: translateY(-10px) rotate(-45deg);
-}
-
-.hamburger__active {
-    // transform: translateX(-300px);
 }
