--- a/src/scss/modules/information.scss
+++ b/src/scss/modules/information.scss
@@ -19,6 +19,10 @@
         font-size: 18px;
         font-weight: 500;
         color: $grey-dark;
+
+        @media (max-width: 500px) {
+            font-size: 16px;
+        }
     }
 }
 
@@ -38,17 +42,30 @@
         font-size: 18px;
         font-weight: 500;
         color: $grey-dark;
+
+        @media (max-width: 500px) {
+            font-size: 16px;
+        }
     }
 
     &-head {
         font-size: 48px;
-        margin: 60px 0 20px 0;
+        margin-top: 60px;
         color: $grey-dark;
+        
+        @media (max-width: 500px) {
+            margin-top: 80px;
+            font-size: 36px;
+        }
     }
 
     &-container {
         max-width: 600px;
         margin: 50px 16px 0;
+
+        @media (max-width: 500px) {
+            margin: 25px 16px 0;
+        }
     }
 }
 
