--- a/src/scss/modules/gallery.scss
+++ b/src/scss/modules/gallery.scss
@@ -3,8 +3,10 @@
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-gap: 8px;
+    // grid-gap: 8px;
+    margin: 0 auto;
     justify-items: center;
+    align-items: center;
 
     @media (max-width: 1350px) {
         grid-template-columns: repeat(2, 1fr);
@@ -12,6 +14,7 @@
     
     @media (max-width: 900px) {
         grid-template-columns: 1fr;
+        grid-gap: 0px;
     }
 
 
@@ -19,11 +22,23 @@
         margin-bottom: 50px;
         display: flex;
         flex-direction: column;
-        max-width: 384px;
     }
 
     &__description {
         font-size: 24px;
         font-weight: 500;
+
+        @media (max-width: 500px) {
+            font-size: 18px;
+        }
+    }
+}
+
+.photos-section__item img {
+
+
+    @media (max-width: 400px) {
+        width: 100%;
+        transform: scale(0.9)
     }
 }
