--- a/src/scss/modules/hamburger.scss
+++ b/src/scss/modules/hamburger.scss
@@ -1,13 +1,14 @@
 .hamburger {
     position: fixed;
     right: 16px;
-    background-color: transparent;
+    background-color: rgba(255, 255, 255, 0.507);
+    border-radius: 6px;
     padding: 10px;
     display: inline-block;
     cursor: pointer;
     border: 0;
     transition: transform 0.3s ease-in-out 0.1s;
-    z-index: 1;
+    z-index: 2;
 
     @media(min-width: 1350px) {
         visibility: hidden;
