--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -6,22 +6,35 @@
   height: 50px;
   font-size: 18px;
   font-weight: 500;
-  transition:  0.3s ease-in-out 0.1s;
+  transition: 0.3s transform ease-in-out 0.1s;
+  z-index: 1;
 
   @media (max-width: 1350px) {
-    display: flex;
+    visibility: hidden;
+    // display: none;
     top: 0;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     transform: translateX(1000px);
 
 
     &__active {
+      visibility: visible;
       // display: block;
-      transform: scale(1.5) translateX(0);
+      transform: scale(2) translateX(0);
       background-color: $blue;
+
+      @media (max-width: 650px) {
+        transform: scale(1.5);
+      }
+
+      @media (max-width: 500px) {
+        transform: scale(1);
+        width: 100%;
+      }
+      
     }
   }
 
