--- a/src/scss/modules/check-section.scss
+++ b/src/scss/modules/check-section.scss
@@ -37,6 +37,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            transition: .3s transform ease-in-out;
+            &:hover {
+                transform: scale(1.05);
+            }
         }
 
         &--item2 {
@@ -49,12 +53,15 @@
             justify-content: center;
             align-items: center;
             margin-left: 32px;
+            transition: .3s transform ease-in-out;
+            &:hover {
+                transform: scale(1.05);
+            }
         }
 
         &--link {
             color: black;
             text-decoration: none;
-            padding: 32px;
         }
     }
 
