--- a/src/scss/modules/footer.scss
+++ b/src/scss/modules/footer.scss
@@ -7,7 +7,7 @@
         margin: 0 auto;
         height: 150px;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
         font-size: 16px;
         color: #fff;
@@ -22,3 +22,4 @@
 .footer p {
     padding-top: 16px;
 }
+
