--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -10,20 +10,21 @@
   z-index: 1;
 
   @media (max-width: 1350px) {
+
     visibility: hidden;
-    // display: none;
+    position: fixed;
     top: 0;
     justify-content: center;
     align-items: center;
     height: 100%;
     width: 100%;
-    transform: translateX(1000px);
+    transform: translateX(100%);
 
 
     &__active {
       visibility: visible;
       // display: block;
-      transform: scale(2) translateX(0);
+      transform:translateX(0) scale(2) ;
       background-color: $blue;
 
       @media (max-width: 650px) {
@@ -67,6 +68,12 @@
       width: 300px;
       display: flex;
       justify-content: center;
+      transition: .3s background-color ease-in-out;
+
+      &:hover {
+        background-color: $grey;
+      }
+
     }
 
     &--main {
